# network-experts

./: .env  .gitignore  README.md  app.py  gradio_interface.py  intelligent_agents.py  main.py  mcp_server.py  offline_demo.py  pyproject.toml  simple_demo.py  smart_demo.py  test_agents.py
core/: config.py
handlers/: __init__.py  mqtt_handler.py  security_audit.py  traffic_analyzer.py
network-experts/: README.md  demo_assessment.py  flowise_api.py  llm_test.py  mcp_server.py  pyproject.toml  requirements.txt
network-experts/a2a/: protocol.py
network-experts/flowise_templates/: agent_orchestration.json
network-experts/handlers/: network_monitor.py  network_scan.py  node_red_handler.py
network-experts/network_experts/: intelligent_agents.py  team.py
network-experts/network_experts/agents/: __init__.py  monitor_brother.py  scanner_brother.py
network-experts/network_experts/handlers/: mcp_handler.py
network-experts/tests/: test_gradio.py
network_experts/: __init__.py  intelligent_agents.py  team.py
network_experts/agents/: cisco_brother.py  monitor_brother.py  scanner_brother.py  security_brother.py  traffic_brother.py
network_experts/handlers/: __init__.py  mcp_handler.py  simulation_handler.py  traffic_analyzer.py
tests/: test_a2a_integration.py  test_cisco_brother.py
