[tool.poetry]
name = "network-experts"
version = "0.1.0"
description = "A team of specialized network expert agents built with SuperAgentX"
authors = ["Network Experts Team <team@networkexperts.ai>"]
readme = "README.md"
packages = [{include = "network_experts"}]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
superagentx = "^0.1.17.6"
pydantic = "^2.8.2"
openai = "^1.47.1"
aiohttp = "^3.10.8"
rich = "^13.9.2"
asyncio-mqtt = "^0.13.0"
python-nmap = "^0.7.1"
scapy = "^2.5.0"
netmiko = "^4.3.0"
paramiko = "^3.4.0"
psutil = "^5.9.8"
requests = "^2.31.0"
dnspython = "^2.4.2"
ping3 = "^4.0.4"
speedtest-cli = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
network-experts = "network_experts.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
